--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                 <a href=""> <img src="img/menor que.png" alt="Swipe Left" class="img"> </a>
                 <a href=""><img src="img/box.png" alt="dropbox" class="img"></a>
                 <a href=""><img src="img/discover.png" alt="discover" class="img"></a>
-                <a href="https://www.instagram.com/uriel_cruz.07/"><img src="img/insta.png" alt="instagram" class="img"></a>
-                <a href=""><img src="img/twitter.png" alt="twitter" class="img"></a>
+                <a href=""><img src="img/firefox.png" alt="firefox" class="img"></a>
+                <a href=""><img src="img/cromo.png" alt="chrome" class="img"></a>
                 <a href=""><img src="img/download.png" alt="download" class="img"></a>
-                <a href="https://github.com/urielccr" target="blank"><img src="img/github.png" alt="github" class="img"></a>
-                <a href="https://www.facebook.com/uriel.cruz.77312477/" target="blank"><img src="img/facebook.png" alt="facebook" class="img"></a>
-                <a href=""><img src="img/twitch.png" alt="twitch" class="img"></a>
-                <a href="https://open.spotify.com/user/22eg7q35umh2zvshykfra5raq"><img src="img/spotify.png" alt="spotify" class="img"></a>
+                <a href="" target="blank"><img src="img/death-star.png" alt="star" class="img"></a>
+                <a href="" target="blank"><img src="img/jedi-order.png" alt="imperio" class="img"></a>
+                <a href=""><img src="img/castillo-de-arena.png" alt="castillo" class="img"></a>
+                <a href=""><img src="img/digg.png" alt="digg" class="img"></a>
                 <a href=""> <img src="img/mayor que.png" alt="Swipe Right" class="img"> </a>
             </div>
         </main>
